--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,34 @@
   --third-btn-color: #f4f4fd;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  padding-left: 0;
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   color: var(--second-text-color);
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .link {
@@ -26,10 +51,33 @@ body {
   list-style: none;
 }
 
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  /* outline: 2px solid red; */
+}
+
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 /* ==============================HEADER======================== */
 .header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
 }
+.header-container {
+  display: flex;
+}
+
 .header-nav {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
 }
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -41,12 +89,15 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--fourth-text-color);
+  margin-right: 76px;
 }
 
 .header-studio {
   color: var(--main-text-color);
 }
 .header-list {
+  display: flex;
+  gap: 40px;
 }
 .header-item {
 }
@@ -68,6 +119,8 @@ body {
 }
 
 .header-contacts-list {
+  display: flex;
+  gap: 40px;
 }
 .header-contacts-item {
 }
@@ -87,27 +140,33 @@ body {
 /* ==============================HERO======================== */
 .hero {
   background-color: var(--main-background-color);
+  margin: 0 auto;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 
 .hero-title {
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
   letter-spacing: 0.02em;
   color: var(--third-text-color);
+  max-width: 496px;
+  margin: 0 auto;
 }
 
 .hero-btn {
+  min-width: 169px;
+  height: 56px;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  display: flex;
-  align-items: center;
   letter-spacing: 0.04em;
-  cursor: pointer;
   color: var(--third-text-color);
   background-color: var(--main-btn-color);
+  border-radius: 4px;
+  display: block;
+  margin: 0 auto;
 }
 
 .hero-btn:hover,
@@ -121,6 +180,8 @@ body {
 .features-title {
 }
 .features-list {
+  display: flex;
+  gap: 24px;
 }
 .features-item {
 }
@@ -150,6 +211,9 @@ body {
   color: var(--main-text-color);
 }
 .gallery-list {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
 }
 .gallery-item {
 }
@@ -167,6 +231,9 @@ body {
   color: var(--main-text-color);
 }
 .team-list {
+  display: flex;
+  gap: 24px;
+  margin-top: 72px;
 }
 .team-item {
 }
@@ -189,12 +256,16 @@ body {
 /* ==============================FOOTER======================== */
 .footer {
   background-color: var(--main-background-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-description {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--sixth-text-color);
+  max-width: 264px;
+  margin-top: 16px;
 }
 
 .footer-logo {
@@ -214,10 +285,16 @@ body {
 
 /* ==============================PORTFOLIO======================== */
 .portfolio {
+  padding-top: 96px;
+  padding-bottom: 60px;
 }
+
 .portfolio-title {
 }
 .portfolio-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
 }
 .portfolio-item {
 }
@@ -230,9 +307,11 @@ body {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  cursor: pointer;
   color: var(--fourth-text-color);
   background-color: var(--third-btn-color);
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
+  padding: 12px 24px;
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -241,8 +320,13 @@ body {
 }
 
 .projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 .projects-item {
+  padding-bottom: 48px;
+  border: 1px solid #e7e9fc;
 }
 
 .projects-link {
